Fix large modules bottom being cut off by footer, add chord module

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -7,6 +7,8 @@
   --color-green-light:#00B746;
   --color-red: #A44844;
   --color-red-light: #FF4D2E;
+  --color-yellow: #E1B800;
+  --color-yellow-light: #FBCD00;
   --color-background: #2B4565;
   --color-faded: rgba(255,255,255,0.5);
 }
