--- a/src/styles/Level5.scss
+++ b/src/styles/Level5.scss
@@ -1,9 +1,8 @@
-.level5 .modules {
+.modules.large {
   display: flex;
   flex-direction: column;
-  margin-bottom: 256px;
   width: 65%;
-  margin: 0 auto;
+  margin: 0 auto 128px auto;
 
   .column:nth-child(2n+0) {
     opacity: 0.7;
